syntax = "proto3";

package service;

option go_package = "github.com/zaibon/go-template/proto";

service MyService {
  rpc SomeGRPCMethod (YourRequest) returns (YourResponse) {}
}

message YourRequest {
  string message = 1;
}

message YourResponse {
  string result = 1;
}